<resources>
    <string name="app_name">WordTranslate</string>
    <string name="menu_edit">Редактировать</string>
    <string name="enter_word">Введите слово</string>
    <string name="enter_translate">Введите перевод</string>
    <string name="translate">Перевести</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_translator_done">Добавить</string>
    <string name="delete">Удалить</string>
    <string name="text">Текст</string>
    <string name="translate_edit">Перевод</string>
    <string name="refresh">Перегрузить</string>
    <string name="subtitle_format">Количество слов: %1$s</string>
    <string name="count_true_answer">Количество правильных ответов: %1$s</string>
    <string name="count_false_answer">Количество неправильных ответов: %1$s</string>
    <string name="dictionary">Словарь</string>
    <string name="add_words">Добавить слово</string>
    <string name="learn_words">Выучить слова</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="word">Слово</string>
    <string name="add_word_to_learn">Добавьте слова в словарь</string>
    <string name="check_word_translate">Показать перевод слова</string>
</resources>
