<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_translator_edit"
        android:title="@string/menu_edit"
        android:icon="@drawable/ic_edit_black_24dp"
        app:showAsAction="withText|ifRoom"
        >
    </item>

    <item
        android:id="@+id/menu_translator_done"
        android:title="@string/menu_translator_done"
        android:icon="@drawable/ic_done_black_24dp"
        app:showAsAction="withText|ifRoom"/>

    <item
        android:id="@+id/menu_translator_delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete_black_24dp"
        app:showAsAction="withText|ifRoom"/>

</menu>