<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/fragment_translator_input_word"
            android:layout_width="match_parent"
            android:inputType="textMultiLine"
            android:hint="@string/enter_word"
            android:paddingBottom="8dp"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/fragment_translator_input_translate"
            android:layout_width="match_parent"
            android:inputType="textMultiLine"
            android:hint="@string/enter_translate"
            android:paddingBottom="8dp"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/fragment_translator_button_translate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:layout_gravity="center"
        android:text="@string/translate"
        style="?android:attr/borderlessButtonStyle"
        />



</LinearLayout>